<resources>
    <string name="app_name">Cash Flow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id1">678723335800-92cge3h0ajhhncah316v38e2ab9el6ac.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_accout">Create a new Accout?</string>
    <string name="this_month">This Month</string>
    <string name="select_date">Select Date</string>
    <string name="datepicker">DatePicker</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="your_account_is_verified">Your account is verified!</string>
    <string name="check_your_email_including_spam">Check Your Email! (Including Spam)</string>
    <string name="cash_flow_tracker">Cash Flow Tracker</string>
    <string name="income_and_expenses">Track your income and expenses with our Cash Flow Financial Tracker</string>
    <string name="fin">fin.json</string>
    <string name="expense_monitoring">Expense Monitoring</string>
    <string name="Manage_desc">Manage your spending and financial health with our Expense Monitoring tools</string>
    <string name="money_json">money.json</string>
    <string name="financial_tips">Financial Tips</string>
    <string name="tips_decs">Get tips on managing your cash flow and improving your financial well-being</string>
    <string name="fin3_json">fin3.json</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="onboard">onBoard</string>
    <string name="greeting_message">Hi, %s!</string>
    <string name="default_greeting_message">Hi there!</string>
    <string name="no_data_message">There is no %1$s data %2$s</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="transaction_data">You have saved the transaction data</string>
    <string name="income_transaction">Income Transaction</string>
    <string name="expense_transaction">Expense Transaction</string>
</resources>