<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.Login">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/large_60dp"
            android:layout_height="@dimen/large_60dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/large_300dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="login.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:layout_marginStart="@dimen/normal_36dp"
                    android:gravity="start"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/purple_txt"
                    android:textSize="@dimen/text_size_28sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginText"
                    android:layout_marginStart="@dimen/normal_32dp"
                    android:layout_marginTop="@dimen/small_10dp"
                    android:layout_marginEnd="@dimen/normal_32dp"
                    android:layout_marginBottom="@dimen/small_10dp"
                    android:background="@drawable/shape_edt"
                    android:drawableEnd="@drawable/ic_baseline_person_outline_24"
                    android:hint="@string/email_hint"
                    android:padding="@dimen/small_14dp"
                    android:paddingStart="@dimen/small_20dp"
                    android:paddingEnd="@dimen/small_20dp"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="@dimen/small_16dp"
                    android:textColor="@color/purple_lit_txt"
                    android:textColorHint="@color/purple_lit_txt"
                    app:backgroundTint="#21CCB5B5"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email"
                    android:layout_marginStart="@dimen/normal_32dp"
                    android:layout_marginTop="@dimen/small_10dp"
                    android:layout_marginEnd="@dimen/normal_32dp"
                    android:background="@drawable/shape_edt"
                    android:drawableEnd="@drawable/ic_baseline_lock_open_24"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/small_14dp"
                    android:paddingVertical="@dimen/small_16dp"
                    android:paddingStart="@dimen/small_20dp"
                    android:paddingEnd="@dimen/small_20dp"
                    android:textColor="@color/purple_lit_txt"
                    android:textColorHint="@color/purple_lit_txt"
                    app:backgroundTint="#21CCB5B5"
                    android:autofillHints="" />
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="@dimen/text_size_20sp"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="@dimen/small_8dp"
                    android:textColor="@color/purple_txt"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normal_54dp"
                    android:layout_below="@id/forgotPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="@dimen/normal_36dp"
                    android:layout_marginTop="@dimen/small_10dp"
                    android:layout_marginBottom="15dp"
                    android:paddingTop="@dimen/small_8dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/purple"
                    app:cornerRadius="@dimen/small_12dp" />

                <TextView
                    android:id="@+id/orTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/small_14dp"
                    android:text="@string/or"
                    android:textColor="#A1A1A1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/googleSignInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normal_54dp"
                    android:layout_below="@id/orTv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="36dp"
                    android:backgroundTint="#21CCB5B5"
                    android:paddingTop="5dp"
                    android:stateListAnimator="@null"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_txt"
                    android:textSize="@dimen/text_size_14sp"
                    app:cornerRadius="@dimen/small_12dp"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconPadding="@dimen/small_10dp"
                    app:iconTint="#00100D0D"
                    app:iconTintMode="src_atop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/googleSignInBtn"
                    android:layout_marginTop="@dimen/normal_32dp"
                    android:layout_marginBottom="@dimen/normal_32dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_a_new_accout"
                        android:textColor="#777777" />

                    <TextView
                        android:id="@+id/createAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/purple_txt"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>
